no longer truncate assertion messages. auto scale font + line height when message exceeds length > 110

--- a/app/css/pages/tests/_commands.scss
+++ b/app/css/pages/tests/_commands.scss
@@ -257,6 +257,7 @@
         font-size: 10px;
         display: inline-block;
         height: 14px;
+        line-height: 16px;
       }
     }
     .command-message {
